# ComputerVision

./: .gitignore  README.md
Computer_Vision_Szeliski_Exercises/.github/: copilot-instructions.md
Computer_Vision_Szeliski_Exercises/Chapter_3_Image_Processing/: Compositing_and_Reflections_3_3.ipynb  Difference_Keying_3_5.ipynb  High-quality_image_resampling_3_16.ipynb  Photo_effects_3_6.ipynb  Sharpening_Blur_Noise_removal_3_12.ipynb  Steerable_filters_3.13.ipynb  Wavelets_3_21.ipynb
Computer_Vision_Szeliski_Exercises/Chapter_4_Models/: Data_fitting_4_1.ipynb
Computer_vision_coursera_IBM/Module_3/: Image Classification with HOG and SVM.ipynb  Image Classification with KNN.ipynb  Support Vector Machines vs Vanilla Linear Classifier-v2.ipynb
Computer_vision_coursera_IBM/Module_4/: Convolutional Neural Network-v2.ipynb  Neural Network Rectified Linear Unit -ReLU- vs Sigmoid-v2.ipynb  Training A Neural Network with Momentum-v2.ipynb  rotated_data.pt
Computer_vision_coursera_IBM/Module_5/: Car Detection with Haar Classifiers-v1.ipynb
Elegoo_Car_Project/: .env.example  .gitignore  LICENSE  README.md  requirements.txt
Elegoo_Car_Project/calibration/: README.md
Elegoo_Car_Project/calibration/cpp_pose_build/: CMakeLists.txt  pose_bindings.cpp
LoLProject/: README.md
LoL_Project/: .gitignore  DATA.md  MODEL_CARD.md  README.md  main.ipynb  requirements.txt  windowCapture.py
LoL_Project/configs/: minimap_config.yaml
Modeling/: CIFAR-10_classifier_conv.ipynb  README.md  best_models_classification.ipynb  comparing_models_classification.ipynb
(+33 files in other folders)
